--- a/Webb/betyg.html
+++ b/Webb/betyg.html
@@ -23,49 +23,90 @@
     <script type="text/javascript" src="js/database.js"></script>
 </head>
 
-<body ng-app="LoggedIn" ng-controller="personCtrl as ctrl">
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">Studentportalen</a>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user "></span> {{user.Name}}<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="betyg.html">Mina betyg</a></li>
-                    </ul>
-                </li>
-                <li><a href="#" id="quickstart-sign-in" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-log-out"></span> Logga ut</a></li>
-            </ul>
-        </div>
-    </nav>
-    <h1 class="text-center">Betyg</h1>
-    <div class="row">
-        <div class="col-sm-4  well well-sm">
-            <h4 class="text-center">Betyg på avslutade kurser</h4>
-            <div ng-repeat="course in myCourses"
-                 class="panel panel-default" 
-                 ng-show="{{course.status === 'finished'}}">
-                <div ng-click="value = !value" ng-class="{ active: value }" class="panel-heading">
-                    <Strong>{{course.name}}</Strong>
-                    <p ng-repeat="grade in globalGrades" ng-if="grade.key == course.courseCode">Betyg: {{grade.grade}} </p>
+<body ng-app="LoggedIn">
+    <div ng-controller="personCtrl as ctrl">
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">Studentportalen</a>
                 </div>
-                <div class="panel-body animate-hide" ng-show="value">
-                    <p><em>BESKRIVNING: </em><samp>{{course.description}}</samp></p>
-                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user "></span> {{user.Name}}<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="betyg.html">Mina betyg</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" id="quickstart-sign-in" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-log-out"></span> Logga ut</a></li>
+                </ul>
             </div>
-        </div>
-    </div>
-    <div class="col-sm-8  well well-sm"></div>
+        </nav>
+        <div class="row">
+            <h1 class="text-center">Mina kurser</h1>
+            <div class="col-sm-1"> </div>
+            <div class="col-sm-5 divmargin well well-sm">
+                <h4 class="text-center">Kommande kurser</h4>
 
-    <h5>Betyg på avslutade uppgifter</h5>
-    <div ng-repeat="course in myCourses" ></div>
-        <ul ng-repeat="grade in myGrades" >
-            <li>{{myGrades}}</li>
-            <p>{{grade.key}}{{grade.inl1}}</p>
-            
-        </ul>
+                <div ng-repeat="course in myCourses" class="panel panel-default" ng-show="{{course.status === 'comming'}}">
+                    <div ng-click="value = !value" ng-class="{ active: value }" class="panel-heading">{{course.name}}</div>
+                    <div class="panel-body animate-hide" ng-show="value">
+                        <p><em>BESKRIVNING: </em><samp>{{course.description}}</samp></p>
+                        <p><em>KURSKOD: </em><samp>{{course.courseCode}}</samp></p>
+                        <p><em>LÄRARE: </em><samp>{{course.teacher}}</samp></p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-sm-5 divmargin well well-sm">
+                <h4 class="text-center">Avslutade kurser</h4>
+                <div ng-repeat="course in myCourses" class="panel panel-default" ng-show="{{course.status === 'finished'}}">
+                    <div ng-click="value = !value" ng-class="{ active: value }" class="panel-heading">{{course.name}}</div>
+                    <div class="panel-body animate-hide" ng-show="value">
+                        <p><em>BESKRIVNING: </em><samp>{{course.description}}</samp></p>
+                        <p><em>KURSKOD: </em><samp>{{course.courseCode}}</samp></p>
+                        <p><em>LÄRARE: </em><samp>{{course.teacher}}</samp></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-1"> </div>
+        </div>
     </div>
+    <div ng-controller="gradesCtrl">
+        <h1 class="text-center">Betyg</h1>
+        <div class="row">
+            <div class="col-sm-1"> </div>
+            <div class="col-sm-5 divmargin well well-sm">
+                <h4 class="text-center">Betyg på avslutade kurser</h4>
+                <div ng-repeat="course in myCourses" class="panel panel-default" ng-show="{{course.status === 'finished'}}">
+                    <div>
+                        <Strong>{{course.name}}</Strong>
+                        <p ng-repeat="grade in globalGrades" ng-if="grade.key == course.courseCode">Betyg: {{grade.grade}} </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-5 divmargin well well-sm">
+                <h4 class="text-center">Betyg på avslutade uppgifter</h4>
+                <br>
+                <div ng-repeat="course in myCourses" class="panel panel-default">
+                    <div>
+                        <Strong>{{course.name}}</Strong>
+                        <tr ng-repeat="assignment in globalAssignments">
+                            <td>{{assignment.grade}}</td>
+                            <td>{{assignment.key}}</td>
+                            <td>{{assignment.childKey}}</td>
+                        </tr>
+
+                        <p ng-repeat="assignment in globalAssignments" ng-if="assignment.key == course.courseCode">
+                            Uppgift: {{assignment.childKey}} <br>Betyg: {{assignment.grade}} </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-1"> </div>
+
+    </div>
+
+
 
 </body>
 
