Assignments now fully work, both for grades and for current

--- a/Webb/betyg.html
+++ b/Webb/betyg.html
@@ -41,37 +41,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="row">
-            <h1 class="text-center">Mina kurser</h1>
-            <div class="col-sm-1"> </div>
-            <div class="col-sm-5 divmargin well well-sm">
-                <h4 class="text-center">Kommande kurser</h4>
-
-                <div ng-repeat="course in myCourses" class="panel panel-default" ng-show="{{course.details.status === 'comming'}}">
-                    <div ng-click="value = !value" ng-class="{ active: value }" class="panel-heading">{{course.details.name}}</div>
-                    <div class="panel-body animate-hide" ng-show="value">
-                        <p><em>BESKRIVNING: </em><samp>{{course.details.description}}</samp></p>
-                        <p><em>KURSKOD: </em><samp>{{course.details.courseCode}}</samp></p>
-                        <p><em>LÄRARE: </em><samp>{{course.details.teacher}}</samp></p>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-sm-5 divmargin well well-sm">
-                <h4 class="text-center">Avslutade kurser</h4>
-                <div ng-repeat="course in myCourses" class="panel panel-default " ng-show="{{course.details.status === 'finished'}}">
-                    <div ng-click="value = !value" ng-class="{ active: value }" class="panel-heading">{{course.details.name}}</div>
-                    <div class="panel-body animate-hide" ng-show="value">
-                        <p><em>BESKRIVNING: </em><samp>{{course.details.description}}</samp></p>
-                        <p><em>KURSKOD: </em><samp>{{course.details.courseCode}}</samp></p>
-                        <p><em>LÄRARE: </em><samp>{{course.details.teacher}}</samp></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-1"> </div>
-        </div>
-    </div>
+        
     <div ng-controller="gradesCtrl">
         <h1 class="text-center">Betyg</h1>
         <div class="row">
@@ -80,29 +50,30 @@
                 <h4 class="text-center">Betyg på avslutade kurser</h4>
                 <div ng-repeat="course in myCourses" ng-show="{{course.details.status === 'finished'}}">
                     <div>
-                        <Strong>{{course.name}}</Strong>
+                        <Strong>{{course.details.name}}</Strong>
                         <p ng-repeat="grade in globalGrades" ng-if="grade.key == course.details.courseCode">Slutbetyg på denna kurs: <strong>{{grade.grade}}</strong> </p>
                     </div>
                 </div>
             </div>
-            
+
             <div class="col-sm-5 divmargin well">
                 <h4 class="text-center">Betyg på avslutade uppgifter</h4>
                 <br>
-                <div ng-repeat="course in myCourses">
-                    <div>
-                        <Strong>{{course.details.name}}</Strong>
 
+                <div ng-repeat="course in myCourses" class="panel panel-default" ng-show="{{course.details.status != 'comming'}}">
+                    <div ng-click="value = !value" ng-class="{ active: value }" class="panel-heading">{{course.details.name}}</div>
+                    <div class="panel-body animate-hide" ng-show="value">
                         <li ng-repeat="assignment in globalAssignments" ng-if="assignment.key == course.details.courseCode">
                             {{assignment.childKey}} : {{assignment.grade}} </li>
                             <br>
+                            <em>Saknas det uppgifter i denna vy, så är de ännu inte betygsatta.</em>
+                        <br>
                     </div>
                 </div>
+                <div class="col-sm-1"> </div>
             </div>
-        </div>
-        <div class="col-sm-1"> </div>
 
-    </div>
+        </div>
 
 
 
