--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -55,32 +55,53 @@
         </div>
         <div class="col-sm-1"> </div>
     </div>
-    <div class="col-sm-1"> </div>
-    <div class="col-sm-5 divmargin well well-sm">
-        <h4 class="text-center">Hur mår du idag?</h4>
-        <p>Hur är ditt humör? Hänger du med på lektionen? Hur känns det i klassrummet? <br> Meddela hur du mår genom att klicka
-            på en av figurerna. Du kan när som helst uppdatera ditt humör.</p>
-        <center>
-            <button class="feelingButton" ng-click="setFeeling(-1)"><img src="images/scared.png" width="60px" alt="Smiley for bad mood"></button>
-            <button class="feelingButton" ng-click="setFeeling(0)"><img src="images/neutral.png" width="60px" alt="Smiley for neutral mood"></button>
-            <button class="feelingButton" ng-click="setFeeling(1)"><img src="images/cool.png" width="60px" alt="Smiley for happy mood"></button>
-        </center>
-    </div>
-    </div>
-    <div class="col-sm-1"> </div>
-    <div class="col-sm-5 divmargin well well-sm">
-        <h4 class="text-center">Pågående kurser</h4>
-        <div ng-repeat="course in myCourses" class="panel panel-default" ng-show="{{course.details.status === 'progress'}}">
-            <div ng-click="value = !value" ng-class="{ active: value }" class="panel-heading">{{course.details.name}}</div>
-            <div class="panel-body animate-hide" ng-show="value">
-                <p><em>BESKRIVNING: </em><samp>{{course.details.description}}</samp></p>
-                <p><em>KURSKOD: </em><samp>{{course.details.courseCode}}</samp></p>
-                <p><em>LÄRARE: </em><samp>{{course.details.teacher}}</samp></p>
+    <div class="row">
+        <div class="col-sm-1"> </div>
+        <div class="col-sm-5 divmargin well well-sm">
+            <h4 class="text-center">Hur mår du idag?</h4>
+            <p>Hur är ditt humör? Hänger du med på lektionen? Hur känns det i klassrummet? <br> Meddela hur du mår genom att
+                klicka på en av figurerna. Du kan när som helst uppdatera ditt humör.</p>
+            <center>
+                <button class="feelingButton" ng-click="setFeeling(-1)"><img src="images/scared.png" width="60px" alt="Smiley for bad mood"></button>
+                <button class="feelingButton" ng-click="setFeeling(0)"><img src="images/neutral.png" width="60px" alt="Smiley for neutral mood"></button>
+                <button class="feelingButton" ng-click="setFeeling(1)"><img src="images/cool.png" width="60px" alt="Smiley for happy mood"></button>
+            </center>
+        </div>
+
+        <div class="col-sm-5 divmargin well well-sm">
+            <h4 class="text-center">Pågående kurser</h4>
+            <div ng-repeat="course in myCourses" class="panel panel-default" ng-show="{{course.details.status === 'progress'}}">
+                <div ng-click="value = !value" ng-class="{ active: value }" class="panel-heading">{{course.details.name}}</div>
+                <div class="panel-body animate-hide" ng-show="value">
+                    <p><em>BESKRIVNING: </em><samp>{{course.details.description}}</samp></p>
+                    <p><em>KURSKOD: </em><samp>{{course.details.courseCode}}</samp></p>
+                    <p><em>LÄRARE: </em><samp>{{course.details.teacher}}</samp></p>
+                </div>
             </div>
         </div>
+        <div class="col-sm-1"> </div>
     </div>
-    </div>
-    </div>
+    <div class="row">
+        <div class="col-sm-1"> </div>
+        <div class="col-sm-10 divmargin well well-sm">
+            <h4 class="text-center">Aktuella uppgifter från dina pågående kurser</h4>
+            <p>Här visas de uppgifter som dina pågående kurser</p>
+            <div>
+                <div ng-repeat="course in myCourses" class="panel panel-default" ng-show="{{course.details.status === 'progress'}}">
+                    <div ng-click="value = !value" ng-class="{ active: value }" class="panel-heading">{{course.details.name}}</div>
+                    <div class="panel-body animate-hide" ng-show="value">
+
+                        <p ng-repeat="assignment in globalActiveAssignments" ng-if="assignment.key == course.details.courseCode">
+                            <strong>{{assignment.childKey}} </strong> <br> {{assignment.assignment.info}} <br>
+                            <strong>Denna uppgift ska vara klar </strong> {{assignment.assignment.duedate}} </p>
+                        <br>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-sm-1"> </div>
+        </div>
 
 
 </body>
