students can now report their attendance

--- a/Webb/betyg.html
+++ b/Webb/betyg.html
@@ -73,7 +73,9 @@
                     <div class="col-sm-1"> </div>
                 </div>
             </div>
-            <div class="row" ng-controller="personCtrl">
+
+            <!-- !!!!!!!!!!! DO NOT DELETE THIS. WE MAY NEED THIS LATER -->
+            <!--            <div class="row" ng-controller="personCtrl">
                 <div id="main" class = 'form'></div>
                 <div class="col-sm-6">
                     <form>
@@ -125,11 +127,10 @@
                         <input type="text" id="question6" ng-model="question6"><br>
                         <label for="question7">Vad är det viktigaste du har lärt dig under kursen?</label><br>
                         <input type="text" id="question7" ng-model="question7"><br><br>
-
                         <button class="button button-block button-positive" ng-click="giveFeedbackToTheFinishedCourse(courseToGiveFeedbackTo, group1, group2, group3, group4, group5, question6, question7)">Lämna feedback!</button>
                     </form>
                 </div>
-            </div>
+            </div>-->
 
 </body>
 
