--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -77,11 +77,11 @@
             <center>
                 <h4 class="text-center"><strong>Anmäl din närvaro: </strong></h4>
                 <form>
-                    <label for="chooseCourse">Välj kurs: </label><br>
+                    <label for="chooseCourse">Välj kurs: </label>
                     <select id="chooseCourse" ng-model="courseAttended" required>
                     <option ng-repeat="course in myCourses" ng-show="{{course.details.status === 'progress'}}">{{course.details.courseCode}}</option>
-                </select><br>
-                    <label for="codeInput">Skriv koden: </label><br>
+                </select>
+                    <label for="codeInput">Närvarokod: </label>
                     <input type="text" id="codeInput" placeholder="ange koden här" ng-model="attendanceCode" required><br><br>
                     <button type="button" class="btn btn-success" ng-click="attendance(courseAttended, attendanceCode)">I'm here!</button>
                 </form>
@@ -105,7 +105,7 @@
         <div class="col-sm-1"> </div>
         <div class="col-sm-10 divmargin well well-sm">
             <h4 class="text-center">Aktuella uppgifter från dina pågående kurser</h4>
-            <p>Här visas de uppgifter som dina pågående kurser</p>
+            <p>Här visas de uppgifter som dina pågående kurser har</p>
             <div>
                 <div ng-repeat="course in myCourses" class="panel panel-default" ng-show="{{course.details.status === 'progress'}}">
                     <div ng-click="value = !value" ng-class="{ active: value }" class="panel-heading">{{course.details.name}}</div>
