corrected the write path for prescence

--- a/Webb/qr.html
+++ b/Webb/qr.html
@@ -44,6 +44,7 @@
         <div class="col-sm-3"> </div>
             <center>
                 <h1 ng-hide="selectedCourse == 'NONE'"> Kod för manuell inmatning <br><br>{{random}} <br><br> Kurs: {{selectedCourse}}</h1>
+                {{string}}
             </center>
     </div>
 </body>
