fixed critical issue with web

--- a/Webb/qr.html
+++ b/Webb/qr.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="js/database.js"></script>
     <script src="js/qrcode.min.js"></script>
     <script src="js/angular-qr.min.js"></script>
-    <script type="text/javascript" src="js/controllers.js"></script>
+    <script type="text/javascript" src="js/qrcontrollers.js"></script>
 </head>
 
 <body ng-app="LoggedIn" ng-controller="AdminUserCtrl as ctrl">
