all course details are now available

--- a/Webb/courses.html
+++ b/Webb/courses.html
@@ -53,6 +53,7 @@
                         <p><em>BESKRIVNING: </em><samp>{{course.details.description}}</samp></p>
                         <p><em>KURSKOD: </em><samp>{{course.details.courseCode}}</samp></p>
                         <p><em>LÄRARE: </em><samp>{{course.details.teacher}}</samp></p>
+                        <a href="{{course.details.coursePlan}}" target="_blank">Kursplan</a>
                     </div>
                 </div>
             </div>
@@ -66,6 +67,7 @@
                         <p><em>BESKRIVNING: </em><samp>{{course.details.description}}</samp></p>
                         <p><em>KURSKOD: </em><samp>{{course.details.courseCode}}</samp></p>
                         <p><em>LÄRARE: </em><samp>{{course.details.teacher}}</samp></p>
+                        <a href="{{course.details.coursePlan}}" target="_blank">Kursplan</a>
                     </div>
                     <a href="betyg.html">Se betyg för dina kurser</a>
                 </div>
