--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -96,6 +96,7 @@
                     <p><em>BESKRIVNING: </em><samp>{{course.details.description}}</samp></p>
                     <p><em>KURSKOD: </em><samp>{{course.details.courseCode}}</samp></p>
                     <p><em>LÄRARE: </em><samp>{{course.details.teacher}}</samp></p>
+                    <a href="{{course.details.coursePlan}}" target="_blank">Kursplan</a>
                 </div>
             </div>
         </div>
