--- a/Webb/manage.html
+++ b/Webb/manage.html
@@ -17,7 +17,7 @@
     <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
     <script type="text/javascript" src="js/database.js"></script>
-    <script type="text/javascript" src="js/controllers.js"></script>
+    <script type="text/javascript" src="js/admincontroller.js"></script>
 </head>
 
 <body>
