--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -89,14 +89,30 @@
         </div>
 
         <div class="col-sm-5 divmargin well well-sm">
-            <h4 class="text-center">Pågående kurser</h4>
-            <div ng-repeat="course in myCourses" class="panel panel-default" ng-show="{{course.details.status === 'progress'}}">
-                <div ng-click="value = !value" ng-class="{ active: value }" class="panel-heading">{{course.details.name}}</div>
-                <div class="panel-body animate-hide" ng-show="value">
-                    <p><em>BESKRIVNING: </em><samp>{{course.details.description}}</samp></p>
-                    <p><em>KURSKOD: </em><samp>{{course.details.courseCode}}</samp></p>
-                    <p><em>LÄRARE: </em><samp>{{course.details.teacher}}</samp></p>
-                    <a href="{{course.details.coursePlan}}" target="_blank">Kursplan</a>
+            <h4 class="text-center">Nyheter</h4>
+            <div class="panel panel-default">
+                <div ng-click="value1 = !value1" ng-class="{ active: value1 }" class="panel-heading">Information för {{user.myClass}}</div>
+                <div ng-repeat="news in classNews" class="panel-body animate-hide" ng-show="value1">
+                    <p><strong>{{news.title}}</strong></p>
+                    <p><samp>{{news.description}}</samp></p>
+                    <p><samp>{{news.author}}</samp></p>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div ng-click="value2 = !value2" ng-class="{ active: value2 }" class="panel-heading">Allmän info</div>
+                <div ng-repeat="news in generalNews" class="panel-body animate-hide" ng-show="value2">
+                    <p><strong>{{news.title}}</strong></p>
+                    <p><samp>{{news.description}}</samp></p>
+                    <p><samp>{{news.author}}</samp></p>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div ng-click="value3 = !value3" ng-class="{ active: value3 }" class="panel-heading">Kurs info</div>
+                <div ng-repeat="news in globalCourseNews" class="panel-body animate-hide" ng-show="value3">
+                   <p>{{news.key}}</p>
+                    <p><strong>{{news.news.title}}</strong></p>
+                    <p><samp>{{news.news.description}}</samp></p>
+                    <p><samp>{{news.news.author}}</samp></p>
                 </div>
             </div>
         </div>
@@ -104,7 +120,7 @@
     </div>
     <div class="row">
         <div class="col-sm-1"> </div>
-        <div class="col-sm-10 divmargin well well-sm">
+        <div class="col-sm-5 divmargin well well-sm">
             <h4 class="text-center">Aktuella uppgifter från dina pågående kurser</h4>
             <p>Här visas de uppgifter som dina pågående kurser har</p>
             <div>
@@ -119,8 +135,21 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-1"> </div>
         </div>
+        <div class="col-sm-5 divmargin well well-sm">
+            <h4 class="text-center">Pågående kurser</h4>
+            <div ng-repeat="course in myCourses" class="panel panel-default" ng-show="{{course.details.status === 'progress'}}">
+                <div ng-click="value = !value" ng-class="{ active: value }" class="panel-heading">{{course.details.name}}</div>
+                <div class="panel-body animate-hide" ng-show="value">
+                    <p><em>BESKRIVNING: </em><samp>{{course.details.description}}</samp></p>
+                    <p><em>KURSKOD: </em><samp>{{course.details.courseCode}}</samp></p>
+                    <p><em>LÄRARE: </em><samp>{{course.details.teacher}}</samp></p>
+                    <a href="{{course.details.coursePlan}}" target="_blank">Kursplan</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-1"> </div>
+    </div>
 </body>
 
 </html>
