weekly feedback per course

--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -155,6 +155,17 @@
         </div>
         <div class="col-sm-1"> </div>
     </div>
+     <div class="row">
+                <div class="col-sm-1"> </div>
+                <div class="col-sm-5 divmargin well well-sm" ng-controller="gradesCtrl">
+                    <h4 class="text-center">Veckovis feedback för dina pågående kurser</h4>
+                    <label for="selectFinishedCourse">Välj en pågående kurs och ge din feedback</label><br>
+                    <select name="selectFinishedCourse" ng-model="activeCourseWeeklyFeedback">
+                        <option ng-repeat="course in myCourses" ng-model="activeCourseWeeklyFeedback" ng-show="{{course.details.status === 'progress'}}">{{course.details.courseCode}}</option>
+                    </select>
+                    <form name="weeklyForm" sf-schema="schemaWeekly" sf-form="formWeekly" sf-model="modelWeekly" ng-submit="onSubmitWeekly(activeCourseWeeklyFeedback, weeklyForm)"></form>
+                </div>
+            </div>
 </body>
 
 </html>
