added ng-cloak to all pages

--- a/Webb/courses.html
+++ b/Webb/courses.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="js/database.js"></script>
 </head>
 
-<body ng-app="LoggedIn">
+<body ng-app="LoggedIn" ng-cloak>
     <div ng-controller="personCtrl as ctrl">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
