--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -29,7 +29,7 @@
 
 </head>
 
-<body ng-app="LoggedIn" ng-controller="personCtrl as ctrl">
+<body ng-app="LoggedIn" ng-controller="personCtrl as ctrl" ng-cloak>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
