--- a/Webb/index.html
+++ b/Webb/index.html
@@ -21,7 +21,7 @@
   <script type="text/javascript" src="js/database.js"></script>
 </head>
 
-<body id="startbody">
+<body id="startbody" ng-cloak>
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
