--- a/Webb/qr.html
+++ b/Webb/qr.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="js/admincontroller.js"></script>
 </head>
 
-<body ng-app="LoggedIn" ng-controller="AdminUserCtrl as ctrl">
+<body ng-app="LoggedIn" ng-controller="AdminUserCtrl as ctrl" ng-cloak>
 
     <div class="row">
         <div class="col-sm-3">
